# jira-webex-report-bridge

./: .gitignore  README.md  pyproject.toml
config/: report_config.example.json
jira_webex_report_bridge/: __init__.py  config.py  jira_client.py  main.py  report_builder.py  webex_client.py
sample_data/: jira_search_response.json
tests/: test_report_builder.py
