[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-webex-report-bridge"
version = "0.1.0"
description = "Portable package for pulling Jira updates, formatting status reports, and sending them to Webex."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "requests>=2.31.0",
]

[project.scripts]
jira-webex-report = "jira_webex_report_bridge.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["jira_webex_report_bridge*"]

